@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Controller_Pro1.0.9</name>
+	<name>Controller_ProEBR</name>
 	<comment></comment>
 	<projects>
 	</projects>
