@@ -48,6 +48,7 @@ import org.apache.http.entity.StringEntity;
 import org.apache.http.impl.client.BasicCredentialsProvider;
 import org.apache.http.impl.client.BasicResponseHandler;
 import org.apache.http.impl.client.DefaultHttpClient;
+import org.apache.http.params.CoreProtocolPNames;
 import org.openremote.controller.command.ExecutableCommand;
 import org.openremote.controller.model.sensor.Sensor;
 import org.openremote.controller.protocol.EventListener;
@@ -224,6 +225,7 @@ public class HttpGetCommand implements ExecutableCommand, EventListener, Runnabl
     String resp = "";
     ResponseHandler<String> responseHandler = new BasicResponseHandler();
     request.addHeader("User-Agent", "OpenRemoteController");
+    request.getParams().setBooleanParameter(CoreProtocolPNames.USE_EXPECT_CONTINUE, false);
     if (contentType != null) {
        request.addHeader("Content-Type", contentType);
     }
